objects/CSQ_ProjectTeamMember__c.object
<CustomObject>
    <description>CS&amp;Q is an extension of I2P 

A Project Team Member is a Project Team member on Any Continuous Improvement Project 

Schneider workers either bFO Users or tracked with their email 
In order to meet the requirements, 
to know the people involved in the improvement project, 
and also enable email notifications at certain steps of the process</description>
    <fields>
        <fullName>CSQ_Email__c</fullName>
        <inlineHelpText>If the person is not deployed with bFO, please enter their email.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSQ_ImprovementProject__c</fullName>
        <label>Improvement Project</label>
        <referenceTo>CSQ_ImprovementProject__c</referenceTo>
        <relationshipLabel>Project Team Members</relationshipLabel>
        <relationshipName>Project_Team_members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CSQ_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Financial Approver</fullName>
                </value>
                <value>
                    <fullName>Team Member</fullName>
                </value>
                <value>
                    <fullName>Project Leader</fullName>
                </value>
                <value>
                    <fullName>Global Process Owner</fullName>
                </value>
                <value>
                    <fullName>Local Process Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSQ_bFOUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>bFO User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Team_members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_IamTeamMember__c</fullName>
        <formula>CSQ_bFOUser__c</formula>
        <label>TECH_IamTeamMember</label>
        <type>Text</type>
    </fields>
    <label>Project Team Member</label>
    <nameField>
        <displayFormat>PTM-{0000}</displayFormat>
        <label>Project Team Member N°</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR_Q316_PTM_EmailOrUserMandatory</fullName>
        <active>true</active>
        <description>Q3 2016 Release : Please fill in bFO User or Email</description>
        <errorConditionFormula>AND( NOT( $User.BypassVR__c ) , ISBLANK( CSQ_Email__c ) , ISBLANK( CSQ_bFOUser__c ) )</errorConditionFormula>
        <errorMessage>Please fill in bFO User or Email</errorMessage>
    </validationRules>
</CustomObject>